# dl-tidy

./: .gitignore  CMakeLists.txt  README.md  installer.iss  resources.rc
include/: types.h
src/: main.cpp
src/app/: app.cpp  app.h  resources.h  tray_app.cpp  tray_app.h
src/core/: clean.cpp  clean.h  file_system.cpp  file_system.h
src/utils/: log.h
src/watch/: watch.cpp  watch.h
